@@ -25,6 +25,9 @@ gphoto2 (2.4.5-1) unstable; urgency=low
      - Remove useless --with-cdk-prefix from ./configure's flags.
      - Drop the dh_makeshlibs call, there's no library here.
      - Various tiny cleanup.
+     - And finally switch to minimal debhelper Makefile, with a single
+       specific target to pass a specific flag (--without-aalib) to
+       ./configure script.
   * debian/changelog:
      - Whitespace cleanup.
 
